# 52sidehustles

./: .coverage  .gitignore  404.html  CNAME  hello.py  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
docs/: evaluation-framework.md  getting-started.md  index.md
docs/sidehustles/: ideas-list.md  week01.md  week02.md  week99-template.md
get_involved!/: index.html
overrides/: form.html
search/: search_index.json
sidehustles/01_calendar_goals/: auto_reload.py  main.py
sidehustles/calendar_goals/: auto_reload.py  main.py
sidehustles/hustle_01_calendar_goals/: pyproject.toml
sidehustles/hustle_01_calendar_goals/tests/: test_main.py
sidehustles/hustle_02_cv_editing/: cv.tex  hello.py  pdfa.xmpi  pyproject.toml
sidehustles/ideas-list/: index.html
sidehustles/week01/: index.html
sidehustles/week02/: index.html
sidehustles/week99-template/: index.html
